app/styles/_sections.scss
#section1 .section {
  padding: 0;
}

.section-no-padding {
  padding: 0;
}

.section-relative {
  position: relative;
}

.section-fixed-size {
  overflow: hidden;
}

.section-full-height {
  min-height: 100vh;
}

.section-full-height.after-navbar:before {
  display: none;
}

.section-bg-adapted {
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-position: 50% 0;
  background-size: cover;
}

.section-gray {
  background-color: #444;
}

.section-light-gray {
  background-color: #f0f0f0;
}

.section-dark-gray {
  background-color: #3c3c3c;
}

.section-container {
  position: relative;
  z-index: 3;
}

.section-container-center {
  text-align: center;
}

.section-container-std-padding {
  padding: 93px 0;
}

.section-container-std-top-padding {
  padding-top: 93px;
}

.section-container-std-bot-padding {
  padding-bottom: 93px;
}

.section-container-sm-padding {
  padding: 41px 0;
}

.section-container-sm-top-padding {
  padding-top: 41px;
}

.section-container-sm-bot-padding {
  padding-bottom: 41px;
}

.section-container-isolated {
  padding-top: 60px;
  padding-bottom: 60px;
}

.section-container-quotes {
  .first {
    padding-right: 20px;
  }
  .middle {
    padding: 0 20px;
  }
  .last {
    padding-left: 20px;
  }
}

.section-container-first {
  padding-top: 93px;
  padding-bottom: 41px;
}

.section-container-middle {
  padding-bottom: 32px;
}

.section-container-last {
  padding-bottom: 93px;
}

.section-row {
  margin-right: -24px;
  margin-left: -24px;
}

.section-col {
  overflow: hidden;
  padding-right: 24px;
  padding-left: 24px;
}

.section-right {
  padding-left: 15px;
}

.section-header {
  line-height: 1.5em;
  margin: -10px 0 0;
  text-align: center;
}

@media (min-width: $screen-sm) {
  .section-short-paddings {
    .section-container-std-padding {
      padding: 59px 0;
    }
    .section-container-std-top-padding {
      padding-top: 59px;
    }
    .section-container-std-bot-padding {
      padding-bottom: 59px;
    }
    .section-container-sm-padding {
      padding: 41px 0;
    }
    .section-container-sm-top-padding {
      padding-top: 41px;
    }
    .section-container-sm-bot-padding {
      padding-bottom: responsi 41px;
    }
    .section-container-isolated {
      padding-top: 59px;
      padding-bottom: 59px;
    }
    .section-container-first {
      padding-top: 59px;
      padding-bottom: 41px;
    }
    .section-container-middle {
      padding-bottom: 41px;
    }
    .section-container-last {
      padding-bottom: 59px;
    }
  }
}

@media (max-width: $screen-xs-max) {
  .section-left {
    padding-right: 15px;
  }
  .section-right {
    padding-top: 51px;
    padding-left: 15px;
  }
}

.section.section--relative.section--fixed-size {
  background-color: $gray-darker;
}

@media screen and (min-width: $screen-sm) {
  .section.section--relative.section--fixed-size.parallax-background {
    background-image: url("../images/bg-lynch-hidef.jpg") !important;
  }

  // lnch
  .section-container.section-container--std-padding.container {
    padding-top: 160px;
    padding-bottom: 160px;
  }
}

.about-top {
  background: url("../images/blonde_1200px-transparent.png") no-repeat;
  background-size: contain !important;
  background-position: bottom right;
  height: 700px;
  @media (max-width: $screen-xs) {
    height: 400px;
  }
}

#creatives-section2 {
  background: url("../images/bg-pencils_full-gray.jpg") no-repeat;
  background-size: cover !important;
  background-position: top right;
  max-height: 742px;

  @media (max-width: $screen-md) {
    background-image: none;

    .col-xs-12.up {
      background: url("../images/bg-pencils-1200px.jpg") no-repeat;
      background-position: 25% 25%;
      padding-left: 30%;
    }

    .col-xs-12.down {
      background-color: #d8d8d8;
    }

    .underline-red {
      border-bottom: 9px solid #e53605;
    }

    .text-wrapper-left,
    .text-wrapper-right {
      text-align: right;
      float: right;
    }

    .text-wrapper-left {
      padding-right: 10px;
    }
  }
  h2 {
    font-family: $font-family-sans-serif;
    font-size: 72px;
    font-weight: bold;
    &#red {
      color: #e53605;
    }
  }

  .text-wrapper-left {
    max-width: 250px;
    height: 100%;
    text-align: right;
    float: right;
    padding-right: 10px;
    padding-bottom: 15px;
  }

  .text-wrapper-right {
    max-width: 310px;
    text-align: right;
    float: right;
    padding-bottom: 15px;
  }

  .align-bottom {
    position: relative;
    bottom: 0;
  }
}

.responsive-table {
  margin: 20px 0;

  .table-cell {
    position: relative;
    text-align: right;
    .align-bottom {
      bottom: 0;
      left: 0;
      width: 100%;
    }
  }
}

#creatives-section3 {
  .text-justify {
    text-align: justify;
  }
}

#creatives-section3 {
  background-color: white;

  h2.header-wrapper {
    font-family: $font-family-sans-serif;
    text-transform: uppercase;
    border: 0.5px solid #0c1204;
    color: #0c1204;
    display: inline-block;
    font-size: 1.8em;
    line-height: 1em;
    padding: 7px;
    text-align: center;
  }
  .mockup-bg {
    background-image: url("../images/mockups/mockup-iphone.png");
    min-height: 600px;
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    margin-bottom: 20px;
    @media (max-width: $screen-xs) {
      min-height: 350px;
    }
  }
}

#creatives-section3 .section-container-isolated {
  padding: 48px 0 32px;
}

#creatives-section4 {
  background-image: url("../images/bg-money-1200px.jpg");
  padding: 20px 0;

  h1,
  h2,
  h3,
  p {
    color: white;
  }
  @media (max-width: $screen-xs) {
    line-height: normal;
  }
  h4 {
    font-family: $font-family-sans-serif;
    font-size: 24px;
    text-align: center;
    word-break: normal;
    color: #fff;
    @media (max-width: $screen-xs) {
      margin-bottom: 40px;
    }
  }
  h3 {
    font-size: 20px;
    line-height: 40px;
  }
  .container-fluid {
    padding: 0 60px 60px 0;
  }
  .text-wrapper {
    max-width: 500px;
    background-color: gray;
    float: right;
    padding: 20px;
    margin-top: 300px;
  }
}

#about-section4 {
  min-height: 500px;
  padding: 20px 0 50px;
  h1 {
    font-size: 90px;
    @media (max-width: 480px) {
      font-size: 50px;
    }
    &.red {
      color: #e53605;
    }
  }

  h4 {
    font-family: $font-family-serif;
    font-size: 34px;
    font-style: italic;
    word-break: normal;
    line-height: 40px;
    padding-bottom: 20px;
    vertical-align: top;
    @media (max-width: $screen-xs) {
      padding-bottom: 40px;
      font-size: 24px;
      line-height: normal;
    }
  }
  h3 {
    font-size: 20px;
    line-height: 40px;
  }
  .border-right {
    border-right: 1px solid #979797;
  }

  .text-wrapper {
    width: 500px;
    background-color: gray;
    text-align: right;
    float: right;
    padding: 20px;
    margin-top: 300px;
  }
}

#creatives-section5 {
  background: no-repeat right url("../images/bg-face02-1200px.jpg");
  background-size: cover !important;
  background-position: 150px;
  @media (max-width: $screen-xs-max) {
    background-position: top;
  }
  h1 {
    font-size: 90px;
    &.red {
      color: #e53605;
    }
    @media (max-width: $screen-xs-max) {
      font-size: 65px;
    }
  }
  .red {
    color: #e53605;
  }

  .container {
    @media (max-width: $screen-xs-max) {
      // lighten the background on mobile
      background: rgba(255, 255, 255, 0.65);
    }

    padding-bottom: 50px;
  }
}

#creatives-section6 {
  h1 {
    font-size: 84px;
  }
  .creatives-profile {
    font-style: italic;
    font-weight: normal;
    font-family: "AvenirNext-MediumItalic", "avenirnext-regular", Helvetica,
      Arial, sans-serif;
  }
  .avatar img {
    border: 1px solid #9da09b;
    border-radius: 50%;
    padding: 2px;
  }
}

#section6 li {
  font-size: 16px;
  line-height: 2em;
}

#section6 a:active,
#section6 a:hover,
#section6 a:link,
#section6 a:visited {
  color: #fff;
  text-shadow: 1px 1px 1px #111;
  white-space: nowrap;
}

#section6 i {
  display: block;
  margin-right: auto;
  margin-left: auto;
}

#about-section5 {
  .top-left-bg {
    background-image: url("../images/Sebastien-Boudet.jpg") !important;
    background-position: top;
    background-size: cover !important;
    min-height: 100vh;

    @media (min-width: $screen-xs) and (max-width: $screen-md - 1) {
      // make sure the image fits in tablet landscape + portrait landscape mode
      min-height: 200vh;
    }
  }
  .bottom-right-bg {
    background-image: url("../images/lily_collins.jpg") !important;
    background-position: right top;
    background-size: cover !important;
    min-height: 100vh;
    @media (min-width: $screen-xs) and (max-width: $screen-md - 1) {
      // make sure the image fits in tablet landscape + portrait landscape mode
      min-height: 200vh;
    }
  }
  .red-bg {
    background-color: #d0021b;
    min-height: 100vh;

    display: flex;
    align-items: center;
  }
  .gray-bg {
    background-color: #979797;
    min-height: 100vh;

    display: flex;
    align-items: center;
  }
  h2.header-wrapper {
    font-family: $font-family-sans-serif;
    text-transform: uppercase;
    border: 0.5px solid #0c1204;
    color: #0c1204;
    display: inline-block;
    font-size: 1.8em;
    line-height: 1em;
    padding: 7px;
    position: relative;
    top: 17em;
    //text-align: center;
  }
  h3 {
    color: white;
    font-size: 42px;
    //padding: 0 20px 0 20px;
    text-align: left;
  }
  .text-intro {
    position: relative;
    color: white;
    text-align: justify;
    padding: 0 20px 0 20px;
  }

  p {
    padding-top: 15px;
    border-top: 8px solid #fff;
  }
  .row {
    margin-top: -25px;
    margin-bottom: -25px;
  }
}

// mailchimp
.response,
div.mce_inline_error {
  color: #fff;
}

.text-coming-soon {
  font-size: 54px;
  color: #ffffff;
}

.text-sign-up {
  font-size: 2.5rem;
  line-height: 3.5rem;
  margin: 1rem 0;
}

.mc_embed_signup {
  margin: 2rem 0;
}

.form-group-email {
  width: 300px;
  padding-right: 35px;
}

// iframe
iframe {
  border: 0;
  width: 100%;
  &.contributor-form {
    margin-top: 40px;
  }
}

